--- a/app/src/main/res/layout/grid_courses.xml
+++ b/app/src/main/res/layout/grid_courses.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    android:outlineSpotShadowColor="@color/blue"
-    app:cardElevation="5dp"
-    android:background="@color/white">
-
-
+   android:elevation="6dp"
+    android:background="@color/white"
+    app:cardCornerRadius="12dp"
+    android:backgroundTint="@color/blue"
+    android:layout_margin="5dp"
+    >
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_margin="10dp"
         android:gravity="center"
-        android:layout_margin="15dp"
         android:background="@color/white">
 
         <ImageView
             android:id="@+id/courseImage"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
             android:elevation="10dp"
-
             android:src="@drawable/ic_launcher_background"
 
             />
@@ -31,12 +32,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:textSize="20dp"
+            android:textSize="25dp"
+            android:textColor="@color/black"
             android:fontFamily="@font/myfont2"
             android:textStyle="bold"
-
-
-
             android:text="CourseName" />
 
     </LinearLayout>
