--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.ElearningApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-         <item name="colorPrimary">#03A9F4</item>
+         <item name="colorPrimary">#71C4EA</item>
         <item name="colorOnSecondary">@color/white</item>
     </style>
 </resources>
