--- a/app/src/main/res/layout/activity_courser.xml
+++ b/app/src/main/res/layout/activity_courser.xml
@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Courser"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/myCourses"
-        android:layout_below="@+id/cardview1"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginBottom="13dp"
 
-        android:text="Explore Content"
-        android:textSize="25dp"
-        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview1"
@@ -91,6 +80,20 @@
 
     </androidx.cardview.widget.CardView>
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="205dp"
+        android:layout_height="34dp"
+        android:layout_above="@+id/myCourses"
+        android:layout_below="@+id/cardview1"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="9dp"
+
+
+        android:text="Explore Content"
+        android:textSize="25dp"
+        android:textStyle="bold" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myCourses"
         android:layout_width="396dp"
@@ -104,4 +107,4 @@
         tools:ignore="UnknownId" />
 
 
-</RelativeLayout>
+</LinearLayout>
