--- a/app/src/main/res/layout/adapterclass.xml
+++ b/app/src/main/res/layout/adapterclass.xml
@@ -6,12 +6,14 @@
     app:cardCornerRadius="15dp"
     app:cardElevation="6dp"
     android:layout_marginBottom="5dp"
+    android:background="@color/white"
     android:layout_marginTop="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="129dp"
-        android:padding="6dp">
+        android:padding="6dp"
+        android:background="@color/white">
 
 
         <ImageView
