--- a/app/src/main/res/layout/activity_courser.xml
+++ b/app/src/main/res/layout/activity_courser.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Courser"
-    android:background="@color/white"
+android:background="@drawable/backgroundimage"
     android:orientation="vertical"
     >
 
@@ -18,17 +18,23 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#C7EFF4"
+        android:background="#DFE1E1"
+        android:outlineSpotShadowColor="@color/black"
+        app:cardElevation="10dp"
+        android:fadingEdgeLength="10dp"
+        app:cardBackgroundColor="@color/white"
+        android:elevation="15dp"
         app:cardCornerRadius="10dp"
         >
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="127dp"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
             android:layout_above="@+id/myCourses"
             android:layout_margin="15dp"
+            android:background="@color/white"
             android:layout_marginBottom="3dp"
-            android:backgroundTint="@color/blue">
+           >
 
             <TextView
                 android:id="@+id/namestudent"
@@ -51,10 +57,10 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="114dp"
                 android:layout_marginBottom="3dp"
-                android:fontFamily="@font/myfont2"
+                android:fontFamily="@font/font4"
                 android:text="Unlock Your Potential: Education is the Key to Success."
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="18dp"
                 android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
@@ -84,12 +90,11 @@
         android:id="@+id/textView4"
         android:layout_width="205dp"
         android:layout_height="34dp"
+        android:textColor="@color/black"
         android:layout_above="@+id/myCourses"
         android:layout_below="@+id/cardview1"
         android:layout_marginStart="100dp"
         android:layout_marginTop="9dp"
-
-
         android:text="Explore Content"
         android:textSize="25dp"
         android:textStyle="bold" />
@@ -100,8 +105,6 @@
         android:layout_height="535dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="1dp"
-        android:background="@color/white"
-        android:backgroundTint="@color/white"
         android:numColumns="2"
         android:outlineSpotShadowColor="@color/white"
         tools:ignore="UnknownId" />
