--- a/app/src/main/res/layout/activity_nextactivity.xml
+++ b/app/src/main/res/layout/activity_nextactivity.xml
@@ -4,27 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundimage"
     tools:context=".Nextactivity"
+
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/courseImage"
         android:layout_width="match_parent"
+        android:outlineSpotShadowColor="@color/black"
+        android:elevation="10dp"
         android:layout_height="210dp"
-
         app:srcCompat="@drawable/datastucture" />
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/nameCourse"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="130dp"
+        android:gravity="center"
+        android:textColor="@color/black"
         android:text="Hello"
-        android:textStyle="bold"
         android:textSize="25dp"
-        android:id="@+id/nameCourse"/>
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listview1"
         android:layout_width="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="15dp"/>
