--- a/app/src/main/res/layout/adapterclass.xml
+++ b/app/src/main/res/layout/adapterclass.xml
@@ -25,26 +25,19 @@
             android:padding="15dp" />
 
         <TextView
-            android:layout_width="241dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="0dp"
-            android:padding="10dp"
             android:id="@+id/Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="33dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginBottom="43dp"
+            android:padding="10dp"
             android:text="Video Title here"
             android:textSize="20dp" />
 
-        <TextView
-            android:layout_width="219dp"
-            android:layout_height="59dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="9dp"
-            android:padding="10dp"
-            android:id="@+id/discription"
-            android:text="Video Title here"
-            android:textSize="15dp" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
