--- a/app/src/main/res/layout/nextitems.xml
+++ b/app/src/main/res/layout/nextitems.xml
@@ -3,17 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
 
+    android:layout_height="70dp"
+    android:foregroundGravity="center"
+    android:layout_marginTop="5dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:outlineSpotShadowColor="@color/black"
+    android:elevation="5dp"
+    android:paddingBottom="25dp"
+    app:cardCornerRadius="10dp"
     android:layout_marginBottom="20dp">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:outlineSpotShadowColor="@color/black"
+    android:elevation="5dp"
+
+    >
 
     <ImageView
         android:id="@+id/videos"
-        android:layout_width="99dp"
-        android:layout_height="81dp"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +37,7 @@
         android:id="@+id/title1"
         android:layout_width="112dp"
         android:layout_height="29dp"
+        android:textColor="@color/black"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="28dp"
