--- a/app/src/main/res/layout/activity_nextactivity.xml
+++ b/app/src/main/res/layout/activity_nextactivity.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:outlineSpotShadowColor="@color/black"
         android:elevation="10dp"
+        android:layout_marginTop="15dp"
         android:layout_height="210dp"
         app:srcCompat="@drawable/datastucture" />
 
