--- a/app/src/main/res/layout/nextitems.xml
+++ b/app/src/main/res/layout/nextitems.xml
@@ -15,8 +15,8 @@
     app:cardCornerRadius="10dp"
     android:layout_marginBottom="20dp">
 <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:outlineSpotShadowColor="@color/black"
     android:elevation="5dp"
