--- a/app/src/main/res/layout/activity_courser.xml
+++ b/app/src/main/res/layout/activity_courser.xml
@@ -63,23 +63,18 @@ android:background="@drawable/backgroundimage"
                 android:textSize="18dp"
                 android:textStyle="bold" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="89dp"
-                android:layout_height="113dp"
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/myimage"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="15dp">
+                android:layout_marginEnd="11dp"
+                android:layout_marginBottom="19dp"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="2dp" />
 
-                <ImageView
-                    android:id="@+id/myimage"
-                    android:layout_width="99dp"
-                    android:layout_height="match_parent"
-                    android:src="@color/black" />
-
-            </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
 
