--- a/app/src/main/res/layout/adapterclass.xml
+++ b/app/src/main/res/layout/adapterclass.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
     app:cardElevation="6dp"
+    android:id="@+id/videolist"
     android:layout_marginBottom="5dp"
     android:background="@color/white"
     android:layout_marginTop="5dp">
