--- a/app/src/main/res/layout/activity_courser.xml
+++ b/app/src/main/res/layout/activity_courser.xml
@@ -97,7 +97,7 @@ android:background="@drawable/backgroundimage"
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myCourses"
         android:layout_width="match_parent"
-        android:layout_height="535dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="1dp"
         android:numColumns="2"
