--- a/app/src/main/res/layout/nextitems.xml
+++ b/app/src/main/res/layout/nextitems.xml
@@ -6,19 +6,18 @@
 
     android:layout_height="70dp"
     android:foregroundGravity="center"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="15dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
-    android:outlineSpotShadowColor="@color/black"
     android:elevation="5dp"
-    android:paddingBottom="25dp"
-    app:cardCornerRadius="10dp"
-    android:layout_marginBottom="20dp">
+    android:paddingBottom="40dp"
+    app:cardCornerRadius="20dp"
+    android:layout_marginHorizontal="@dimen/cardview_default_radius"
+    android:layout_marginBottom="10dp">
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:outlineSpotShadowColor="@color/black"
     android:elevation="5dp"
 
     >
