--- a/app/src/main/res/layout/activity_nextactivity.xml
+++ b/app/src/main/res/layout/activity_nextactivity.xml
@@ -28,12 +28,10 @@
         android:textSize="25dp"
         android:textStyle="bold" />
 
-    <ListView
+    <GridView
         android:id="@+id/listview1"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+        android:numColumns="2"
+        android:padding="5dp" />
 </LinearLayout>
