--- a/app/src/main/res/layout/nextitems.xml
+++ b/app/src/main/res/layout/nextitems.xml
@@ -2,51 +2,63 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-
-    android:layout_height="70dp"
-    android:foregroundGravity="center"
-    android:layout_marginTop="15dp"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
-    android:elevation="5dp"
-    android:paddingBottom="40dp"
-    app:cardCornerRadius="20dp"
-    android:layout_marginHorizontal="@dimen/cardview_default_radius"
-    android:layout_marginBottom="10dp">
-<RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:elevation="5dp"
-
+    android:layout_width="180dp"
+    android:layout_height="180dp"
+    app:cardCornerRadius="15dp"
+    android:elevation="6dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="20dp"
     >
 
-    <ImageView
-        android:id="@+id/videos"
-        android:layout_width="70dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="15dp"
+        android:elevation="6dp"
+        >
 
-    <TextView
-        android:id="@+id/title1"
-        android:layout_width="112dp"
-        android:layout_height="29dp"
-        android:textColor="@color/black"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="95dp"
-        android:text="TextView"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintStart_toEndOf="@+id/videos"
-        app:layout_constraintTop_toTopOf="parent" />
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        >
+
+
+        <ImageView
+            android:id="@+id/videos"
+            android:layout_width="103dp"
+            android:layout_height="87dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="39dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/title1"
+            android:layout_width="97dp"
+            android:layout_height="25dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="42dp"
+            android:layout_marginTop="121dp"
+            android:layout_marginEnd="41dp"
+            android:layout_marginBottom="34dp"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.47"
+            app:layout_constraintStart_toEndOf="@+id/videos"
+            app:layout_constraintTop_toTopOf="parent" />
+    </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 </androidx.cardview.widget.CardView>
