--- a/app/src/main/res/layout/activity_nextactivity.xml
+++ b/app/src/main/res/layout/activity_nextactivity.xml
@@ -26,12 +26,19 @@
         android:textColor="@color/black"
         android:text="Hello"
         android:textSize="25dp"
-        android:textStyle="bold" />
+
+        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"/>
 
     <GridView
+
         android:id="@+id/listview1"
         android:layout_width="match_parent"
-        android:layout_height="480dp"
+        android:layout_height="match_parent"
+        android:verticalSpacing="10dp"
         android:numColumns="2"
-        android:padding="5dp" />
+        android:padding="8dp"
+        />
+
 </LinearLayout>
