--- a/app/src/main/res/layout/nextitems.xml
+++ b/app/src/main/res/layout/nextitems.xml
@@ -5,60 +5,34 @@
     android:layout_width="180dp"
     android:layout_height="180dp"
     app:cardCornerRadius="15dp"
+    android:layout_marginTop="50dp"
     android:elevation="6dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="20dp"
     >
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="15dp"
-        android:elevation="6dp"
-        >
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        >
+        android:orientation="vertical"
+        android:gravity="center">
 
 
         <ImageView
             android:id="@+id/videos"
             android:layout_width="103dp"
             android:layout_height="87dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="26dp"
-            android:layout_marginEnd="39dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/title1"
             android:layout_width="97dp"
             android:layout_height="25dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="121dp"
-            android:layout_marginEnd="41dp"
-            android:layout_marginBottom="34dp"
             android:text="TextView"
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.47"
-            app:layout_constraintStart_toEndOf="@+id/videos"
-            app:layout_constraintTop_toTopOf="parent" />
-    </RelativeLayout>
+      />
 
-    </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
