--- a/app/src/main/res/layout/adapterclass.xml
+++ b/app/src/main/res/layout/adapterclass.xml
@@ -40,9 +40,10 @@
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="9dp"
             android:padding="10dp"
-            android:maxEms="50"
+            android:maxEms="100"
             android:text="Video Title here"
-            android:textSize="20dp"
+            android:textSize="15dp"
+            android:textStyle="bold"
             android:textColor="@color/black"/>
 
     </RelativeLayout>
