--- a/app/src/main/res/layout/nextitems.xml
+++ b/app/src/main/res/layout/nextitems.xml
@@ -25,8 +25,11 @@
 
         <TextView
             android:id="@+id/title1"
-            android:layout_width="97dp"
-            android:layout_height="25dp"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+
             android:text="TextView"
             android:textColor="@color/black"
             android:textSize="20dp"
