--- a/app/src/main/res/anim/mainanim.xml
+++ b/app/src/main/res/anim/mainanim.xml
@@ -9,5 +9,11 @@
         android:toYScale="1"
         android:duration="600"/>
 
+<!--    <alpha-->
+<!--        android:fromAlpha="0.0"-->
+<!--        android:toAlpha="1.0"-->
+<!--        android:duration="1000"-->
+<!--        android:interpolator="@android:interpolator/decelerate_cubic" />-->
+
 
 </set>
