--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="23dp"
+        android:id="@+id/imgview"
         android:layout_marginEnd="1dp"
         android:src="@drawable/myapp"></ImageView>
 
