--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -152,4 +152,16 @@
         android:id="@+id/NextActivity"
         android:layout_margin="15dp"
         android:text="Submit" />
+
+
+    <Button
+        android:id="@+id/endGame"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+      android:layout_marginLeft="220dp"
+        android:background="@color/black"
+        android:visibility="gone"
+        android:text="Submit"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 </LinearLayout>
