--- a/app/src/main/res/layout/activity_won.xml
+++ b/app/src/main/res/layout/activity_won.xml
@@ -20,6 +20,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <ImageView
             android:id="@+id/tropy"
             android:layout_width="100dp"
@@ -82,6 +86,16 @@
             android:layout_marginTop="340dp"
             android:layout_marginStart="180dp"/>
 
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/char11"
+                android:layout_width="185dp"
+                android:layout_height="177dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="86dp" />
+
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 
