--- a/app/src/main/res/layout/pdflayout.xml
+++ b/app/src/main/res/layout/pdflayout.xml
@@ -4,13 +4,14 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="30dp"
-     app:cardElevation="12dp"
+    app:cardElevation="12dp"
     android:layout_marginTop="10dp"
-     android:id="@+id/videolist"
-     android:padding="5dp"
-    android:background="@color/white"
+    android:id="@+id/pdfList"
+    android:padding="5dp"
+    android:background="@color/white">
 
- >
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,33 +21,34 @@
 
 
         <ImageView
-            android:id="@+id/thumbNail"
-            android:layout_width="150dp"
-            android:layout_height="90dp"
+            android:id="@+id/imgag"
+            android:layout_width="128dp"
+            android:layout_height="109dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="243dp"
-            android:src="@drawable/baseline_picture_as_pdf_24"
-            android:layout_marginBottom="20dp"
-            android:padding="15dp" />
+            android:layout_marginEnd="277dp"
+            android:layout_marginBottom="14dp"
+            android:padding="15dp"
+            android:src="@drawable/baseline_picture_as_pdf_24" />
 
         <TextView
-            android:id="@+id/Title"
-            android:layout_width="221dp"
-            android:layout_height="107dp"
+            android:id="@+id/pdfTitle"
+            android:layout_width="263dp"
+            android:layout_height="111dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="7dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginBottom="9dp"
-            android:padding="10dp"
+            android:layout_marginBottom="5dp"
             android:maxEms="100"
             android:maxLines="3"
+
+            android:padding="10dp"
             android:text="Video Title here"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
